# i_mth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: constants.rs  lib.rs  utils.rs  vectors.rs
src/vectors/: vector2d.rs  vector3d.rs
