[package]
name = "i_mth"
version = "0.0.2"
edition = "2021"
description = "A math library continuously under development made for use in particle and ridgid body dynamics and statics"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
